# Laravel/projecte_final/routes/api.php
@@ -93,6 +93,8 @@ Route::get('/vehicles', [VehicleController::class, 'getVehicles'])->name('vehicl
 
 Route::get('/vehicle/{id}', [VehicleController::class, 'getVehicle'])->name('vehicle_cerca');
 
+Route::get('/vehicle-client/{idClient}', [VehicleController::class, 'getVehicleClient'])->name('vehicle_client');
+
 Route::post('/vehicle/{id}', [VehicleController::class, 'updateVehicle'])->name('vehicle_update');
 
 Route::post('/vehicle', [VehicleController::class, 'insertVehicle'])->name('vehicle_insert');
@@ -115,5 +117,6 @@ Route::delete('/servei/{id}', [ServeiController::class, 'deleteServei'])->name('
 
 
 Route::get('/facturas', [FacturaController::class, 'getFacturas'])->name('facturas_list');
+Route::post('/factura', [FacturaController::class, 'insertFactura'])->name('factura_insert');
 
 
